@@ -1,4 +1,5 @@
 v0.5.1:
+  * Upgrade ``six`` (future.utils.six) to v1.4.1
   * http.server module backport
   * bytes.split() and .rsplit() bugfixes
 v0.5.0:
